# shadeswap

./: .gitignore  .gitmodules  AMM_Pair_Contract_v2.0.drawio  Cargo.toml  README.md  Router_Logic.drawio  deployer.info  file  foo.key  formulas.md  makefile  rustfmt.toml  shadeswap_deploy.py
compiled/: amm_pair.wasm  factory.wasm  lp_token.wasm  router.wasm  staking.wasm
contracts/amm_pair/: Cargo.toml  Makefile  NOTICE  README.md  ShadeSwapCalculation (version 1).xlsb.xlsx  ShadeSwapCalculation.xlsx  deploy.sh  ~$ShadeSwapCalculation.xlsx
contracts/amm_pair/.cargo/: config
contracts/amm_pair/src/: contract.rs  help_math.rs  help_test_lib.rs  lib.rs  msg.rs  operations.rs  query.rs  state.rs  test.rs
contracts/amm_pair/tests/: integration.rs
contracts/amm_pair/testscript/: foo.key  package-lock.json  package.json
contracts/amm_pair/testscript/scripts/: deployment.js
contracts/factory/: Cargo.toml  Makefile  NOTICE  README.md
contracts/factory/examples/: schema.rs
contracts/factory/src/: contract.rs  execute.rs  lib.rs  msg.rs  operations.rs  query.rs  state.rs  test.rs
contracts/factory/tests/: integration.rs
contracts/lp_token/: Cargo.toml  README.md
contracts/lp_token/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/lp_token/tests/example-receiver/src/: contract.rs
contracts/router/: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
contracts/router/.cargo/: config
contracts/router/schema/: count_response.json  handle_msg.json  init_msg.json  query_msg.json  state.json
contracts/router/src/: contract.rs  lib.rs  msg.rs  operations.rs  query.rs  state.rs  test.rs
contracts/router/tests/: integration.rs
contracts/snip20/: Cargo.toml
contracts/snip20/src/: contract.rs  msg.rs  state.rs  transaction_history.rs
contracts/snip20/tests/example-receiver/: Cargo.toml
contracts/snip20/tests/example-receiver/src/: contract.rs
contracts/staking/: Cargo.toml  README.md
contracts/staking/.cargo/: config
contracts/staking/src/: contract.rs  lib.rs  operations.rs  query.rs  state.rs  test.rs
contracts/staking/src/tests/: integration.rs
contracts/staking/tests/: Staking_Integration_tests.xlsx  integration.rs
dockerfile/: dockerfile
docs/: README.md
docs/Diagrams/: AMM_Pair_Contract.drawio  Router_Logic.drawio
misc/: admin.wasm
priceOracleApi/: Makefile  config.yaml  fetch-prices-master.py  requirements.txt
