[workspace]
members = [
    "packages/shadeswap-shared",
    "contracts/snip20",
    "contracts/lp_token",
    "contracts/amm_pair",
    "contracts/factory",
    "contracts/router",
    "contracts/staking",
    "packages/network_integration",
    "packages/cosmwasm_math_compat",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true