[workspace]
members = [
    "packages/shadeswap-shared",
    "contracts/lp_token",
    "contracts/snip20",
    "contracts/amm_pair",
    "contracts/factory",
    "contracts/router",
    "contracts/staking",
    "packages/cosmwasm_math_compat",
    "packages/network_integration",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true