[package]
name = "apair"
version = "0.1.0"
authors = ["Tony <plutonyium@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.7.0" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.8"
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { version = "0.2" }
shadeswap-shared = {path = "../../packages/shadeswap-shared"}
composable-snip20 = { path = "../../libraries/fadroma-next/lib/composable-snip20" }

[dev-dependencies]
cosmwasm-schema = "0.16.7"
