[package]
authors = ["Tony <plutonyium@gmail.com>"]
edition = "2018"
name = "amm_pair"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = true

[features]
default = []
# for quicker tests, cargo test --lib
# # for more explicit tests, cargo test --features=backtraces

[dependencies]
cosmwasm-std = {git = "https://github.com/scrtlabs/cosmwasm", branch = "secret"}
cosmwasm-storage = {git = "https://github.com/scrtlabs/cosmwasm", branch = "secret"}
schemars = "0.8.1"
serde = {version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc",
]}
shadeswap-shared = {path = "../../packages/shadeswap-shared"}
snafu = {version = "0.7.1"}
secret-multi-test = { git = "https://github.com/securesecrets/secret-plus-utils", version = "0.13.4" }

[dev-dependencies]
cosmwasm-schema = {git = "https://github.com/CosmWasm/cosmwasm", commit = "1e05e7e"}
