[package]
authors = ["Tony <plutonyium@gmail.com>"]
edition = "2018"
name = "amm_pair"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
# for quicker tests, cargo test --lib
# # for more explicit tests, cargo test --features=backtraces

[dependencies]
cosmwasm-std = {git = "https://github.com/scrtlabs/cosmwasm", branch = "secret"}
cosmwasm-storage = {git = "https://github.com/scrtlabs/cosmwasm", branch = "secret"}
schemars = "0.8.1"
serde = {version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc",
]}
# cw-storage-plus = "0.15.0"
# cw2 = "0.15.0"

shadeswap-shared = {path = "../../packages/shadeswap-shared"}
staking =  {path = "../../contracts/staking"}
snip20-reference-impl = {path ="../../contracts/snip20"}
lp-token = {path ="../../contracts/lp_token"}
snafu = {version = "0.7.1"}
secret-multi-test = { git = "https://github.com/securesecrets/secret-plus-utils", version = "0.13.4" }
[dev-dependencies]
cosmwasm-schema = {git = "https://github.com/CosmWasm/cosmwasm"}
