[package]
name = "staking"
version = "0.1.0"
authors = ["Tony <plutonyium@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
# for quicker tests, cargo test --lib
# # for more explicit tests, cargo test --features=backtraces


[dependencies]
snafu = { version = "0.7.1" }
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
schemars = "0.8.1"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
query-authentication = { git = "https://github.com/securesecrets/query-authentication", branch = "cosmwasm_v1_upgrade", optional = true }
shadeswap-shared = {path = "../../packages/shadeswap-shared"}

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm"}
snip20-reference-impl = {path ="../../contracts/snip20"}
secret-multi-test = { git = "https://github.com/securesecrets/secret-plus-utils", version = "0.13.4" }
multi_test = {path = "../../packages/multi_test"}